--- a/schizo2.html
+++ b/schizo2.html
@@ -17,7 +17,7 @@
       </div>
         <nav>
           <ul>
-            <li><a href="schizo1.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="schizo2.html">About</a></li> 
             <li><a href="schizo3.html">Service</a></li>     
           </ul>
