--- a/schizo2.html
+++ b/schizo2.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>udacity</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ruda|Fast+one|Butcherman|Megrim|Patrick+Hand+SC|Special+Elite">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="schizocss.css">
 </head>
@@ -13,7 +14,7 @@
   <header>
     <div class="container"> 
       <div id="branding">
-        <h1>UDACITY</h1>
+        <h1>Efiko</h1>
       </div>
         <nav>
           <ul>
@@ -28,7 +29,7 @@
 <footer class="container2">
 
   <div class="link">
-   <p class="udacity">UDACITY &copy; 2018 | </p>
+   <p class="udacity">Efiko &copy; 2018 | </p>
    <a href="https://web.facebook.com/okpara.emmanuel.121" class="fa fa-facebook"></a>
    <a href="https://twitter.com/OkparaE257" class="fa fa-twitter"></a>
    <a href="https://www.instagram.com/okparaemmanuel8419/" class="fa fa-instagram"></a>
