udacity to foxel

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>udacity</title>
+  <title>Foxel</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ruda|Fast+one|Butcherman|Megrim|Patrick+Hand+SC|Special+Elite">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="schizocss.css">
+  <link rel="stylesheet" href="page.css">
 </head>
 <body>
 
   <header>
     <div class="container"> 
       <div id="branding">
-        <h1>EFIKO</h1>
+        <h1>Foxel</h1>
       </div>
         <nav>
           <ul>
@@ -26,14 +27,18 @@
    </div>
 </header>
 
-<h1 class="welcome" >Welcome To EFIKO</h1>
+<h1 class="welcome" >Welcome To Foxel</h1>
 
 <img src="https://images.unsplash.com/photo-1520085601670-ee14aa5fa3e8?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=cdc4d332eab7ae54a6449ef4918730f5&auto=format&fit=crop&w=1350&q=80" class="bg" />
+<input accept="file_extension|audio/*|video/*|image/*|media_type">
 
-<footer class="container2">
+<input type="file" name="pic" accept="image/*">
+<input type="submit">
 
+
+<footer>
   <div class="link">
-   <p class="udacity">Efiko &copy; 2018 | </p>
+   <p class="udacity">Foxel &copy; 2018 | </p>
    <a href="https://web.facebook.com/okpara.emmanuel.121" class="fa fa-facebook"></a>
    <a href="https://twitter.com/OkparaE257" class="fa fa-twitter"></a>
    <a href="https://www.instagram.com/okparaemmanuel8419/" class="fa fa-instagram"></a>
@@ -44,7 +49,7 @@
        <li><a href="author.html">Authors</a></li> 
        <li><a href="copyright.html">All rights reserved</a></li>
        <li><a href="sites.html">website</a></li>  
-       <li><a href="schizoco.html">schizo co.LTD</a></li>    
+       <li><a href="schizoco.html">Foxel co.LTD</a></li>    
    </div>
    </footer>
  
