--- a/schizo3.html
+++ b/schizo3.html
@@ -7,7 +7,7 @@
   <title>FOXEL</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ruda|Fast+one|Butcherman|Megrim|Patrick+Hand+SC|Special+Elite">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="schizocss2.css">
+  <link rel="stylesheet" href="schizocss3.css">
   <link rel="stylesheet" href="page.css">
 </head>
 <body>
@@ -27,8 +27,13 @@
    </div>
 </header>
 
-<footer class="container2">
+<body>
 
+  <div class="intro">
+  <p>I am writing in response to the call for the role of a Software Developer at Andela. I partook in the just concluded Google Africa Challenge Scholarship through the Andela Learning Community and I also got some experience working as an intern in Hotels.ng Internship 4.0. These have improved my proficiency in HTML, CSS and JavaScript. My education and experience are a great fit for this role.</p>
+  </div>
+
+<footer class="container2">
   <div class="link">
    <p class="udacity">Foxel &copy; 2018 | </p>
    <a href="https://web.facebook.com/okpara.emmanuel.121" class="fa fa-facebook"></a>
@@ -44,6 +49,6 @@
        <li><a href="schizoco.html">Foxel co.LTD</a></li>    
    </div>
    </footer>
-   
-</body>
+
+   </body>
 </html>
