modification of foxel site

--- a/schizo2.html
+++ b/schizo2.html
@@ -7,8 +7,7 @@
   <title>FOXEL</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ruda|Fast+one|Butcherman|Megrim|Patrick+Hand+SC|Special+Elite">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="schizocss2.css">
-  <link rel="stylesheet" href="page.css">
+  <link rel="stylesheet" href="css/page.css">
 </head>
 <body>
 
@@ -19,18 +18,49 @@
       </div>
         <nav>
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="schizo2.html">About</a></li> 
-            <li><a href="schizo3.html">Service</a></li>     
+            <li><a href="index.html">HOME</a></li>
+            <li class="current"><a href="schizo2.html">ABOUT</a></li> 
+            <li><a href="schizo3.html">SERVICE</a></li>     
           </ul>
         </nav>
    </div>
 </header>
 
-<footer class="container2">
+<section id="main">
+    <div class="container">
+    <article  id="main-col">
+    <h1>About us</h1>
+    <p>I am writing in response to the call for the role of a Software Developer at Andela. I partook in the just concluded Google Africa Challenge Scholarship through the Andela Learning Community and I also got some experience working as an intern in Hotels.ng Internship 4.0. These have improved my proficiency in HTML, CSS and JavaScript. My education and experience are a great fit for this role.</p>
+    <p>Africa Challenge Scholarship through the Andela Learning Community and I also got some experience working as an intern in Hotels.ng Internship 4.0. These have improved my proficiency in HTML, CSS and JavaScript. My education and experience are a great fit for this role.</p>
+    </article>
+  
+      <aside id="sidebar">
+        <h1 class="page-title">Services</h1>
+        <ul id="services">
+          <li>
+            <h3>Website Design</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies at, vulputate id lorem. Nulla facilisi.</p>
+            <p>Pricing: $1,000 - $3,000</p>
+          </li>
+          <li>
+            <h3>Website Maintenance</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies at, vulputate id lorem. Nulla facilisi.</p>
+            <p>Pricing: $250 per month</p>
+          </li>
+          <li>
+            <h3>Website Hosting</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies at, vulputate id lorem. Nulla facilisi.</p>
+            <p>Pricing: $25 per month</p>
+          </li>
+        </ul>
+      </aside>
+  </div>
+</section>
+
+<footer>
 
   <div class="link">
-   <p class="udacity">Foxel &copy; 2018 | </p>
+   <p class="udacity">Foxel &copy; 2018 </p>
    <a href="https://web.facebook.com/okpara.emmanuel.121" class="fa fa-facebook"></a>
    <a href="https://twitter.com/OkparaE257" class="fa fa-twitter"></a>
    <a href="https://www.instagram.com/okparaemmanuel8419/" class="fa fa-instagram"></a>
