--- a/index.html
+++ b/index.html
@@ -1,44 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Foxel</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ruda|Fast+one|Butcherman|Megrim|Patrick+Hand+SC|Special+Elite">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="schizocss.css">
-  <link rel="stylesheet" href="page.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Foxel</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ruda|Fast+one|Butcherman|Megrim|Patrick+Hand+SC|Special+Elite">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/page.css">
+  </head>
+  <body>
 
   <header>
-    <div class="container"> 
+    <div class="container">
       <div id="branding">
         <h1>Foxel</h1>
       </div>
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="schizo2.html">About</a></li> 
-            <li><a href="schizo3.html">Service</a></li>     
-          </ul>
-        </nav>
-   </div>
-</header>
+      <nav>
+        <ul>
+            <li class="current"><a href="index.html">HOME</a></li>
+            <li><a href="schizo2.html">ABOUT</a></li> 
+            <li><a href="schizo3.html">SERVICE</a></li>     
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-<h1 class="welcome" >Welcome To Foxel</h1>
+  <section id="showcase">
+  <div class="container">
+  <h1 class="welcome" >Welcome To Foxel</h1><br />
+  
+  <button type="reset" class="button_2" style="margin-bottom:15px;" onclick="location.href='signin.html'">sign in</button><br />
+  <button type="submit" class="button_2">Create an account</button>
+ </div>
+ </section>
 
-<img src="https://images.unsplash.com/photo-1520085601670-ee14aa5fa3e8?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=cdc4d332eab7ae54a6449ef4918730f5&auto=format&fit=crop&w=1350&q=80" class="bg" />
-<input accept="file_extension|audio/*|video/*|image/*|media_type">
-
-<input type="file" name="pic" accept="image/*">
-<input type="submit">
-
-
-<footer>
+  <footer>
   <div class="link">
-   <p class="udacity">Foxel &copy; 2018 | </p>
+   <p class="udacity">Foxel &copy; 2018  </p>
    <a href="https://web.facebook.com/okpara.emmanuel.121" class="fa fa-facebook"></a>
    <a href="https://twitter.com/OkparaE257" class="fa fa-twitter"></a>
    <a href="https://www.instagram.com/okparaemmanuel8419/" class="fa fa-instagram"></a>
@@ -52,8 +51,6 @@
        <li><a href="schizoco.html">Foxel co.LTD</a></li>    
    </div>
    </footer>
- 
-<body>
-  
-</body>
+
+   </body>
 </html>
