--- a/signin.html
+++ b/signin.html
@@ -20,7 +20,7 @@
           <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="schizo2.html">ABOUT</a></li> 
-            <li class="current"><a href="schizo3.html">Service</a></li>     
+            <li><a href="schizo3.html">SERVICE</a></li>     
           </ul>
         </nav>
    </div>
@@ -28,7 +28,28 @@
 
 <body>
 
- 
+    <section id="signin">
+      <div class="container">
+        <div class="dark">
+          <h3>Get A Quote</h3>
+          <form class="quote">
+            <div>
+              <label>Username/email</label><br>
+              <input type="Email" placeholder="you@xample.org">
+            </div>
+            <div>
+              <label>password</label><br>
+              <input type="password" placeholder="*****">
+            </div>
+            <div class="reminder">
+             forgot your password? <a href="">change password</a>
+            </div>
+            <button class="button_2" type="submit">Sign in</button>
+        </form>
+        </div>
+      </div>
+      </section>
+
 <footer>
   <div class="link">
    <p class="udacity">Foxel &copy; 2018 </p>
