modification of foxel site

--- a/index.html
+++ b/index.html
@@ -18,9 +18,15 @@
       </div>
       <nav>
         <ul>
-            <li class="current"><a href="index.html">HOME</a></li>
-            <li><a href="schizo2.html">ABOUT</a></li> 
-            <li><a href="schizo3.html">SERVICE</a></li>     
+            <button type="reset" onclick="location.href='index.html'" class="button_1" class="current">
+             <li>HOME</li>
+            </button>
+            <button type="reset" onclick="location.href='schizo2.html'" class="button_1" class="current">
+             <li>ABOUT</li>
+            </button>
+            <button type="reset" onclick="location.href='schizo3.html'" class="button_1" class="current">
+             <li>SERVICE</li>
+            </button>   
         </ul>
       </nav>
     </div>
