--- a/signin.html
+++ b/signin.html
@@ -18,9 +18,15 @@
       </div>
         <nav>
           <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="schizo2.html">ABOUT</a></li> 
-            <li><a href="schizo3.html">SERVICE</a></li>     
+            <button type="reset" onclick="location.href='index.html'" class="button_1" class="current">
+             <li>HOME</li>
+            </button>
+            <button type="reset" onclick="location.href='schizo2.html'" class="button_1" class="current">
+             <li>ABOUT</li>
+            </button>
+            <button type="reset" onclick="location.href='schizo3.html'" class="button_1" class="current">
+             <li>SERVICE</li>
+            </button>   
           </ul>
         </nav>
    </div>
@@ -28,6 +34,7 @@
 
 <body>
 
+    <section id="showcase">
     <section id="signin">
       <div class="container">
         <div class="dark">
@@ -48,6 +55,7 @@
         </form>
         </div>
       </div>
+      </section>
       </section>
 
 <footer>
