modification of foxel site

--- a/index.html
+++ b/index.html
@@ -31,15 +31,16 @@
       </nav>
     </div>
   </header>
-
-  <section id="showcase">
-  <div class="container">
-  <h1 class="welcome" >Welcome To Foxel</h1><br />
-  
-  <button type="reset" class="button_2" style="margin-bottom:15px;" onclick="location.href='signin.html'">sign in</button><br />
-  <button type="submit" class="button_2">Create an account</button>
- </div>
- </section>
+   <div class="case">
+    <section id="showcase">
+    <div class="container">
+    <h1 class="welcome" >Welcome To Foxel</h1><br />
+    
+    <button type="reset" class="button_2" style="margin-bottom:15px;" onclick="location.href='signin.html'">sign in</button><br />
+    <button type="submit" class="button_2">Create an account</button>
+  </div>
+  </section>
+  </div>
 
   <footer>
   <div class="link">
