--- a/signin.html
+++ b/signin.html
@@ -33,7 +33,7 @@
 </header>
 
 <body>
-
+  <div class="case">
     <section id="showcase">
     <section id="signin">
       <div class="container">
@@ -57,7 +57,8 @@
       </div>
       </section>
       </section>
-
+    </div>
+    
 <footer>
   <div class="link">
    <p class="udacity">Foxel &copy; 2018 </p>
